--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -271,10 +271,19 @@ input[type=submit] {
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
 .main-nav {
     float: right;
     list-style: none;
     margin-top: 55px;
+
 }
 
 .main-nav li {
@@ -501,4 +510,61 @@ input[type=submit] {
 
 .fa-instagram:hover {
     color: #517fa4;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
+
+.sticky .logo { display: none; }
+.sticky .logo-black {
+    display: block;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #e67e22;
+}
+
+.sticky .main-nav { margin-top: 18px; }
+
+.js--wp-1,
+.js--wp-2,
+.js--wp-3{
+    opacity: 0;
+    animation-duration: 1s ;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated{
+    opacity: 1;
+}
+
+.js--wp-4 {
+    animation-duration: 1s;
+}
+
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff;
 }
